testes no notebook

--- a/Titanic_simple_test.ipynb
+++ b/Titanic_simple_test.ipynb
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -627,7 +627,7 @@
         "# Drop columns that are not useful for the model\n",
         "df.drop(['PassengerId', 'Name', 'Ticket', 'Cabin', 'Embarked'], axis=1, inplace=True)\n",
         "\n",
-        "# Convert categorical variables to dummy variables\n",
+        "# Convert categorical variables to dummy variables ;)\n",
         "df = pd.get_dummies(df, columns=['Sex'], drop_first=True)\n",
         "\n",
         "# Display the processed data\n",
