testes no notebook

--- a/Titanic_simple_test.ipynb
+++ b/Titanic_simple_test.ipynb
@@ -622,7 +622,7 @@
       ],
       "source": [
         "# Handle missing values (simple imputation for Age)\n",
-        "df['Age'].fillna(df['Age'].median(), inplace=True)\n",
+        "df.fillna({'Age': df['Age'].median()}, inplace=True)\n",
         "\n",
         "# Drop columns that are not useful for the model\n",
         "df.drop(['PassengerId', 'Name', 'Ticket', 'Cabin', 'Embarked'], axis=1, inplace=True)\n",
